Добавление возможности получать места и окружающий мир пользователя по координатам
