# storage/api-docs/api-docs.json
@@ -9,97 +9,6 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/api/v1/weather/random-idea": {
-            "get": {
-                "tags": [
-                    "Ideas"
-                ],
-                "summary": "Получить случайную идею о погоде",
-                "description": "Возвращает случайную идею, связанную с погодой, включая описание, настроение, время года и погодные условия",
-                "operationId": "d6d530cb09b5f641340f463edddaa9db",
-                "responses": {
-                    "200": {
-                        "description": "Успешный ответ",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "idea": {
-                                            "description": "Случайная идея о погоде",
-                                            "properties": {
-                                                "description": {
-                                                    "description": "Описание погодной идеи",
-                                                    "type": "string",
-                                                    "example": "Легкий снежок кружится под фонарями, создавая новогоднее настроение"
-                                                },
-                                                "mood": {
-                                                    "description": "Настроение, которое создает погода",
-                                                    "type": "string",
-                                                    "example": "Сказочная"
-                                                },
-                                                "season": {
-                                                    "description": "Время года",
-                                                    "type": "string",
-                                                    "enum": [
-                                                        "Зима",
-                                                        "Весна",
-                                                        "Лето",
-                                                        "Осень"
-                                                    ],
-                                                    "example": "Зима"
-                                                },
-                                                "weather_type": {
-                                                    "description": "Тип погоды",
-                                                    "type": "string",
-                                                    "enum": [
-                                                        "Снежно",
-                                                        "Дождливо",
-                                                        "Облачно",
-                                                        "Гроза",
-                                                        "Туманно",
-                                                        "Солнечно"
-                                                    ],
-                                                    "example": "Снежно"
-                                                },
-                                                "color_palette": {
-                                                    "description": "Цветовая палитра, ассоциирующаяся с погодой",
-                                                    "type": "string",
-                                                    "example": "Холодные тона",
-                                                    "nullable": true
-                                                },
-                                                "has_rainbow": {
-                                                    "description": "Наличие радуги",
-                                                    "type": "boolean",
-                                                    "example": true,
-                                                    "nullable": true
-                                                },
-                                                "has_wind": {
-                                                    "description": "Наличие ветра",
-                                                    "type": "boolean",
-                                                    "example": true,
-                                                    "nullable": true
-                                                },
-                                                "has_fog": {
-                                                    "description": "Наличие тумана",
-                                                    "type": "boolean",
-                                                    "example": true,
-                                                    "nullable": true
-                                                }
-                                            },
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Внутренняя ошибка сервера"
-                    }
-                }
-            }
-        },
         "/api/v1/world/current": {
             "post": {
                 "tags": [
@@ -256,10 +165,6 @@
         {
             "name": "World",
             "description": "Информация о текущем окружающем мире."
-        },
-        {
-            "name": "Ideas",
-            "description": "Ideas"
         }
     ]
 }
